manifests/cluster/qbittorrent/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.cowlab.org`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 8080
